--- a/cursos/espanol/datascience/X.0_distribuciones_de_probabilidad.ipynb
+++ b/cursos/espanol/datascience/X.0_distribuciones_de_probabilidad.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vvNnCEzeP_0M"
+      },
       "source": [
         "# ¿Qué es una distribución de probabilidad?\n",
         "\n",
@@ -63,44 +52,44 @@
         "* ¿Qué valores deberían preocuparme?\n",
         "\n",
         "La distribución responde exactamente eso.\n"
-      ],
-      "metadata": {
-        "id": "vvNnCEzeP_0M"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Ejercicios:"
-      ],
       "metadata": {
         "id": "659fpZ74P_co"
-      }
+      },
+      "source": [
+        "# Ejercicios:"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import random\n",
-        "from scipy.stats import binom, uniform, norm"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zSi_uOzBIPVN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import random\n",
+        "from scipy.stats import binom, uniform, norm"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VhMnc9b3IJ6V"
+      },
       "source": [
         "## EJERCICIO 1 — Tornillos defectuosos\n",
         "\n",
         "**Caja:** Binomial\n",
         "\n",
-        "**Pregunta (gerente):**\n",
+        "**Pregunta:**\n",
         "\n",
-        "> Produzco 100 tornillos\n",
-        "> Probabilidad de defecto = 1%\n",
-        "> ¿Probabilidad de que salgan **exactamente 2 defectuosos**?\n",
+        "* Produzco 100 tornillos\n",
+        "* Probabilidad de defecto = 1%\n",
+        "* ¿Probabilidad de que salgan **exactamente 2 defectuosos**?\n",
         "\n",
         "### Traducción\n",
         "\n",
@@ -108,27 +97,29 @@
         "* Probabilidad de defecto: `p = 0.01`\n",
         "* Queremos: `P(X = 2)`\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "VhMnc9b3IJ6V"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EHjpv5StItz-"
+      },
+      "outputs": [],
       "source": [
         "# Escribir aqui la solucion\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "EHjpv5StItz-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OVegZi2FJLZh"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 1 Simulacion{display-mode:\"form\"}\n",
         "def produccion_tornillos():\n",
@@ -146,28 +137,26 @@
         "        exactamente_dos += 1\n",
         "\n",
         "print(\"Probabilidad aproximada:\", exactamente_dos / experimentos)"
-      ],
-      "metadata": {
-        "id": "OVegZi2FJLZh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vq0xbSlCIUb0"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 1 Caja Negra{display-mode:\"form\"}\n",
         "prob = binom.pmf(2, n=100, p=0.01)\n",
         "print(prob)"
-      ],
-      "metadata": {
-        "id": "vq0xbSlCIUb0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "yGHqSFi9ITOl"
+      },
       "source": [
         "## EJERCICIO 2 — Ventas en una tienda\n",
         "\n",
@@ -185,27 +174,29 @@
         "* `p = 0.3`\n",
         "* Queremos: `P(X ≥ 8)`\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "yGHqSFi9ITOl"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Z_lMK-x7JdQo"
+      },
+      "outputs": [],
       "source": [
         "# Escribir aqui la solucion\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "Z_lMK-x7JdQo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6LFrFQspIY9b"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 2 Simulacion{display-mode:\"form\"}\n",
         "def ventas_dia():\n",
@@ -219,28 +210,26 @@
         "        exito += 1\n",
         "\n",
         "print(\"Probabilidad aproximada:\", exito / experimentos)"
-      ],
-      "metadata": {
-        "id": "6LFrFQspIY9b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Gi-ulFSpJcn_"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 2 Caja Negra{display-mode:\"form\"}\n",
         "prob = 1 - binom.cdf(7, n=20, p=0.3)\n",
         "print(prob)"
-      ],
-      "metadata": {
-        "id": "Gi-ulFSpJcn_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "cCoQXIWlIZFK"
+      },
       "source": [
         "## EJERCICIO 3 — Retraso del proveedor\n",
         "\n",
@@ -256,27 +245,29 @@
         "* Rango: `[0, 60]`\n",
         "* Queremos: `P(X > 45)`\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "cCoQXIWlIZFK"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pob1krtDIc48"
+      },
+      "outputs": [],
       "source": [
         "# Escribir aqui la solucion\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "pob1krtDIc48"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aQ15IYboJevz"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 3 Simulacion{display-mode:\"form\"}\n",
         "import random\n",
@@ -292,28 +283,26 @@
         "        retrasos_largos += 1\n",
         "\n",
         "print(\"Probabilidad aproximada:\", retrasos_largos / experimentos)"
-      ],
-      "metadata": {
-        "id": "aQ15IYboJevz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HyJshSIlJfgj"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 3 Caja Negra{display-mode:\"form\"}\n",
         "prob = 1 - uniform.cdf(45, loc=0, scale=60)\n",
         "print(prob)"
-      ],
-      "metadata": {
-        "id": "HyJshSIlJfgj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NnCHJPfsIdA3"
+      },
       "source": [
         "## EJERCICIO 4 — Llegada de clientes\n",
         "\n",
@@ -330,27 +319,29 @@
         "* Queremos: `P(X > 40)`\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "NnCHJPfsIdA3"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZDKgOJ1fIfX4"
+      },
+      "outputs": [],
       "source": [
         "# Escribir aqui la solucion\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "ZDKgOJ1fIfX4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rGzkbllwJiEw"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 4 Simulacion{display-mode:\"form\"}\n",
         "def llegada_cliente():\n",
@@ -364,28 +355,26 @@
         "        tarde += 1\n",
         "\n",
         "print(\"Probabilidad aproximada:\", tarde / experimentos)"
-      ],
-      "metadata": {
-        "id": "rGzkbllwJiEw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "y_qiZe2DJixk"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 4 Caja Negra{display-mode:\"form\"}\n",
         "prob = 1 - uniform.cdf(40, loc=0, scale=60)\n",
         "print(prob)"
-      ],
-      "metadata": {
-        "id": "y_qiZe2DJixk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "G4td5FmMIfjp"
+      },
       "source": [
         "## EJERCICIO 5 — Baja productividad\n",
         "\n",
@@ -403,27 +392,29 @@
         "* Desvío: `σ = 10`\n",
         "* Queremos: `P(X < 80)`\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "G4td5FmMIfjp"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kFZOwDVaIibj"
+      },
+      "outputs": [],
       "source": [
         "# Escribir aqui la solucion\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "kFZOwDVaIibj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dLdrpmKwJk8y"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 5 Simulacion{display-mode:\"form\"}\n",
         "def produccion_empleado():\n",
@@ -437,28 +428,26 @@
         "        baja_produccion += 1\n",
         "\n",
         "print(\"Probabilidad aproximada:\", baja_produccion / experimentos)"
-      ],
-      "metadata": {
-        "id": "dLdrpmKwJk8y"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UXAklkoIJmoF"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 5 Caja Negra{display-mode:\"form\"}\n",
         "prob = norm.cdf(80, loc=100, scale=10)\n",
         "print(prob)"
-      ],
-      "metadata": {
-        "id": "UXAklkoIJmoF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5IljXupuIila"
+      },
       "source": [
         "## EJERCICIO 6 — Peso de paquetes y recargo\n",
         "\n",
@@ -476,27 +465,29 @@
         "* `μ = 5`\n",
         "* `σ = 0.4`\n",
         "* Queremos: `P(X > 6)`"
-      ],
-      "metadata": {
-        "id": "5IljXupuIila"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xff6ALcBIkKK"
+      },
+      "outputs": [],
       "source": [
         "# Escribir aqui la solucion\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "xff6ALcBIkKK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qBPi9WMGJngn"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 6 Simulacion{display-mode:\"form\"}\n",
         "def peso_paquete():\n",
@@ -510,25 +501,34 @@
         "        recargo += 1\n",
         "\n",
         "print(\"Probabilidad aproximada:\", recargo / experimentos)"
-      ],
-      "metadata": {
-        "id": "qBPi9WMGJngn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-etqoGzXJn-_"
+      },
+      "outputs": [],
       "source": [
         "#@title Solucion Ejercicio 6 Caja Negra{display-mode:\"form\"}\n",
         "prob = 1 - norm.cdf(6, loc=5, scale=0.4)\n",
         "print(prob)"
-      ],
-      "metadata": {
-        "id": "-etqoGzXJn-_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
