--- a/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
+++ b/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
@@ -64,6 +64,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a15fc5d7",
+   "metadata": {},
+   "source": [
+    "# Los test de hipotesis como cajas negras \n",
+    "\n",
+    "> que como entrada reciben otras cajas negras (distribuciones)\n",
+    "\n",
+    "## La analogía general: cajas negras\n",
+    "\n",
+    "Imagina que tenemos dos fenómenos que generan datos, por ejemplo:\n",
+    "\n",
+    "* **Caja A:** el peso “teórico” que dice la fábrica (100g)\n",
+    "* **Caja B:** el peso “real” que mido abriendo chocolates\n",
+    "\n",
+    "La pregunta es:\n",
+    "\n",
+    "> ¿Estas dos cajas generan **la misma distribución** o **no**?\n",
+    "\n",
+    "No se trata de ver si una pesa 100 y otra 100.1, sino si **en la forma de comportarse** son iguales o distintas.\n",
+    "\n",
+    "## Por qué necesitamos un test: el ruido\n",
+    "\n",
+    "Incluso si las cajas son iguales, **los datos nunca salen idénticos**.\n",
+    "Siempre hay **ruido**, variabilidad, azar — aunque el proceso sea el mismo.\n",
+    "\n",
+    "Por eso **no alcanza con ver las diferencias**. Hay que preguntar:\n",
+    "\n",
+    "> ¿La diferencia que veo podría haber salido del azar?\n",
+    "> o\n",
+    "> ¿Es demasiado grande como para ser atribuida al azar?\n",
+    "\n",
+    "\n",
+    "## Qué hace realmente un test\n",
+    "\n",
+    "Un test hace 3 pasos muy mecánicos:\n",
+    "\n",
+    "1. **Asume que las cajas son iguales** (hipótesis nula)\n",
+    "2. **Mide cuánto difieren los datos reales de lo esperado**\n",
+    "3. **Calcula lo probable que sería observar esa diferencia solo por azar**\n",
+    "\n",
+    "Si eso es **muy improbable**, concluye:\n",
+    "\n",
+    "> “Ah ok, entonces probablemente las cajas no son iguales”.\n",
+    "\n",
+    "## Por qué funciona:\n",
+    "\n",
+    "Funciona porque se basa en algo muy fuerte:\n",
+    "\n",
+    "> Si dos cajas son iguales, sus datos se deberían parecer **hasta cierto grado tolerable**.\n",
+    "\n",
+    "Y ese grado tolerable está cuantificado matemáticamente por la distribución asociada (Z, t, χ², etc.) que te dice:\n",
+    "\n",
+    "> “Esto es lo que el **azar puro** sería capaz de producir”.\n",
+    "\n",
+    "Si lo que observas está **fuera del patrón del azar**, entonces no es azar.\n",
+    "\n",
+    "\n",
+    "## ¿Dónde entra la probabilidad?\n",
+    "\n",
+    "La probabilidad entra en el paso 3.\n",
+    "\n",
+    "Ese número famoso es el **p-valor**, que significa:\n",
+    "\n",
+    "> Si las cajas fueran iguales, ¿qué tan probable es ver una diferencia como esta?\n",
+    "\n",
+    "* Si es **probable**, sigues pensando que las cajas son iguales.\n",
+    "* Si es **muy improbable**, sospechas que las cajas son distintas.\n",
+    "\n",
+    "\n",
+    "## ¿Qué rol juega la distribución?\n",
+    "\n",
+    "Cada test usa una distribución como **simulador interno del azar**:\n",
+    "\n",
+    "| Test          | Caja que simula el azar |\n",
+    "| ------------- | ----------------------- |\n",
+    "| Z-test        | Normal                  |\n",
+    "| t-test        | t de Student            |\n",
+    "| χ² test       | Chi cuadrado            |\n",
+    "| Binomial test | Binomial                |\n",
+    "\n",
+    "Es literalmente:\n",
+    "\n",
+    "> “Voy a modelar el azar como si viniera de esta caja y ver qué tan lejos están tus datos”.\n",
+    "\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "Un test de hipótesis funciona porque:\n",
+    "\n",
+    "> 1. **Define qué sería el azar**\n",
+    "> 2. **Mide qué tan lejos están los datos del azar**\n",
+    "> 3. **Decide si lo observado puede ser explicado por el azar**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd2db550",
    "metadata": {},
    "source": [
@@ -305,6 +401,81 @@
     "- Si comparas valores numéricos → t o z.\n",
     "- Si comparas categorías → χ².\n",
     "- Si comparas más de dos grupos → F (ANOVA). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df0b004",
+   "metadata": {},
+   "source": [
+    "# Problema de las dietas:\n",
+    "\n",
+    "Tenemos:\n",
+    "\n",
+    "> Dos grupos de personas → cada uno sigue una dieta → medimos pérdida de peso → dato continuo en kg\n",
+    "\n",
+    "Entonces, la **caja negra que genera los datos** es:\n",
+    "\n",
+    "> **Caja del “peso perdido”** → variable **continua**\n",
+    "\n",
+    "Características:\n",
+    "\n",
+    "* muchas pequeñas causas sumadas (metabolismo, actividad física, etc.)\n",
+    "* volatilidad individual\n",
+    "* medición numérica en escala continua\n",
+    "\n",
+    "Este tipo de fenómeno está **muy bien modelado** por la **distribución normal** (o aproximación).\n",
+    "\n",
+    "No hace falta que sea perfecta, basta que sea razonable.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Qué pregunta se quiere responder (interpretación del problema)\n",
+    "\n",
+    "La pregunta no es si alguien perdió más o menos peso, sino:\n",
+    "\n",
+    "> **¿Las dos cajas negras (dieta 1 y dieta 2) producen distribuciones iguales o distintas?**\n",
+    "\n",
+    "Formalmente:\n",
+    "\n",
+    "* H0: ambas dietas generan **la misma distribución** (mismo promedio)\n",
+    "* H1: las distribuciones **no son iguales** (promedios distintos)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Qué tipo de test corresponde (matching de cajas)\n",
+    "\n",
+    "Sabemos que:\n",
+    "\n",
+    "* dato continuo → **caja del azar ≈ Normal**\n",
+    "* comparamos **dos promedios**\n",
+    "* no conocemos la desviación estándar poblacional (raro tenerla en la realidad)\n",
+    "\n",
+    "→ Nuestra caja negra del test es:\n",
+    "\n",
+    "> **t-test para muestras independientes**\n",
+    "\n",
+    "Si conociéramos la desviación poblacional usaríamos Z, pero en nutrición, medicina, psicología, industria, etc. casi nunca se conoce, por lo que **t es el estándar natural**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Qué hace internamente el t-test (sin fórmulas)\n",
+    "\n",
+    "El test hace lo siguiente:\n",
+    "\n",
+    "1. **Asume que ambas dietas son la misma caja** (H0)\n",
+    "2. Calcula la diferencia de medias observada\n",
+    "3. Pregunta:\n",
+    "\n",
+    "   > “Si ambas cajas fueran iguales, ¿qué tan probable es observar una diferencia como esta solo por azar?”\n",
+    "4. Si esa probabilidad (p-valor) es muy baja → concluye que **no son la misma caja**\n",
+    "\n",
+    "En nuestro lenguaje:\n",
+    "\n",
+    "> **Compara los datos reales contra lo que el azar permitiría si las cajas fueran iguales.**\n",
+    "\n",
+    "\n",
+    "# Pregunta para hacerle a la IA: Por que no se puede utilizar anova en vez de test t?"
    ]
   },
   {
