--- a/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
+++ b/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
@@ -472,10 +472,138 @@
     "\n",
     "En nuestro lenguaje:\n",
     "\n",
-    "> **Compara los datos reales contra lo que el azar permitiría si las cajas fueran iguales.**\n",
+    "> **Compara los datos reales contra lo que el azar permitiría si las cajas fueran iguales.**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b3058c3",
+   "metadata": {},
+   "source": [
+    "> **Pregunta para hacerle a la IA: Por que no se puede utilizar anova en vez de test t?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "004276a9",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Resolviendo con python y scipy\n",
     "\n",
+    "[Documentacion de scipy sobre test de hipotesis](https://docs.scipy.org/doc/scipy/reference/stats.html#hypothesis-tests-and-related-functions)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e9738e7",
+   "metadata": {},
+   "source": [
+    "### Problema de la fabrica de chocolates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44569771",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_1samp\n",
     "\n",
-    "# Pregunta para hacerle a la IA: Por que no se puede utilizar anova en vez de test t?"
+    "def test_chocolate_weight(weights, target_mean=100, alpha=0.05):\n",
+    "    \"\"\"\n",
+    "    Compara los pesos medidos contra un peso teórico.\n",
+    "    Retorna si se rechaza H0 y el p-valor.\n",
+    "    H0: media real = target_mean\n",
+    "    \"\"\"\n",
+    "    stat, p_value = ttest_1samp(weights, target_mean)\n",
+    "    reject = p_value < alpha\n",
+    "    return reject, p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b8fcd4",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "weights = [98.5, 101.2, 100.3, 99.8, 100.5, 101.0, 99.6]\n",
+    "\n",
+    "reject, p = test_chocolate_weight(weights)\n",
+    "print(\"Reject H0:\", reject)\n",
+    "print(\"p-value:\", p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ab9519",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### Problema de las dietas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d431dbd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "def compare_means_ttest(data1, data2, alpha=0.05):\n",
+    "    \"\"\"\n",
+    "    Compara dos muestras con un t-test independiente.\n",
+    "    Retorna si se rechaza H0 y el p-valor.\n",
+    "    H0: ambas muestras provienen de la misma distribución (misma media)\n",
+    "    \"\"\"\n",
+    "    stat, p_value = ttest_ind(data1, data2, equal_var=True)\n",
+    "    reject = p_value < alpha\n",
+    "    return reject, p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9d907f",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "diet1 = [2.0, 2.5, 3.0, 2.8, 2.3, 2.7, 2.5]\n",
+    "diet2 = [3.0, 3.2, 3.1, 2.9, 2.8, 3.0, 3.2]\n",
+    "\n",
+    "reject, p = compare_means_ttest(diet1, diet2)\n",
+    "print(\"Reject H0:\", reject)\n",
+    "print(\"p-value:\", p)"
    ]
   },
   {
