--- a/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
+++ b/cursos/espanol/datascience/X.1_test_hipotesis.ipynb
@@ -480,7 +480,7 @@
    "id": "3b3058c3",
    "metadata": {},
    "source": [
-    "> **Pregunta para hacerle a la IA: Por que no se puede utilizar anova en vez de test t?**"
+    "> **Pregunta para hacerle a la IA: Por que no se utilizar anova en vez de test t?**"
    ]
   },
   {
